# meta

./: .gitignore  .gitmodules  CMakeLists.txt  PreLoad.cmake  README.md  TODO  meta.sln  meta.vcxproj
cmake/: CMakeLists.txt
conan/: CMakeLists.txt  conanfile.py
src/meta/: CMakeLists.txt  bundle.h  clock.h  concatenate.h  contains.h  cpuclock.h  detect.h  filter.h  remove.h
src/meta/asm/: comment.h  stopwatch.h
src/meta/bundles/: aos.h  container.h  layout.h  soa.h
src/meta/bundles/containers/: soa.h
src/meta/clocks/: cpu.h  metric.h  recorder.h
src/meta/clocks/details/: table.h
src/meta/clocks/metrics/: all.h  average.h  kurtosis.h  stddev.h  sum.h
src/meta/lambda/: arguments.h  arity.h  returns.h
src/meta/pattern/: alias.h  factory.h
src/meta/patterns/: alias.h  factory.h  fold.h  threadpool.h  union.h
src/meta/preprocessor/: cat.h  pair.h  sequence.h  size.h
src/meta/traits/: is_steady.h
src/meta/utility/: comment.h  print.h
tests/: CMakeLists.txt
tests/bundle/: CMakeLists.txt  main.cpp  mystruct.h
tests/clock/: CMakeLists.txt  main.cpp
tests/contains/: CMakeLists.txt  main.cpp
tests/cpuclock/: CMakeLists.txt  main.cpp
tests/detect/: CMakeLists.txt  main.cpp
tests/factory/: CMakeLists.txt  main.cpp
tests/filter/: CMakeLists.txt  main.cpp
tests/fold/: CMakeLists.txt
tests/fold/enum/: CMakeLists.txt  main.cpp
tests/fold/tag/: CMakeLists.txt  main.cpp
tests/lambda/: CMakeLists.txt  main.cpp
tests/recorder/: CMakeLists.txt  main.cpp
tests/threadpool/: CMakeLists.txt  main.cpp
tests/unfold/: CMakeLists.txt  main.cpp
